added header tests

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,7 @@
 <mat-toolbar>
-  beatify
+  <mat-toolbar-row>
+    <span class="title">beatify</span>
+    <span class="spacer"></span>
+    <button mat-raised-button color="accent">Login</button>
+  </mat-toolbar-row>
 </mat-toolbar>
