added auth service

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,10 @@
   <mat-toolbar-row>
     <span class="title">beatify</span>
     <span class="spacer"></span>
-    <button mat-raised-button color="accent">Login</button>
+    <button
+      mat-raised-button
+      color="accent"
+      (click)="onLoginButtonClick()"
+    >Login</button>
   </mat-toolbar-row>
 </mat-toolbar>
