--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <button
       mat-raised-button
       color="accent"
-      (click)="onLoginButtonClick()"
-    >Login</button>
+      (click)="onLogoutButtonClick()"
+    >Logout</button>
   </mat-toolbar-row>
 </mat-toolbar>
