--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,9 +3,12 @@
     <span class="title">beatify</span>
     <span class="spacer"></span>
     <button
-      mat-raised-button
+      mat-button
       color="accent"
       (click)="onLogoutButtonClick()"
-    >Logout</button>
+    >
+      Logout
+      <mat-icon>power_settings_new</mat-icon>
+    </button>
   </mat-toolbar-row>
 </mat-toolbar>
