added search container

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,1 +1,5 @@
 <btf-header></btf-header>
+<div class="main-content">
+  <btf-search-container></btf-search-container>
+  <btf-playlist-container></btf-playlist-container>
+</div>
