--- a/src/app/components/search-container/search-container.component.html
+++ b/src/app/components/search-container/search-container.component.html
@@ -1,6 +1,17 @@
 <mat-card>
   <mat-form-field>
-    <input matInput color="accent" placeholder="Search">
+    <input
+      matInput
+      color="accent"
+      placeholder="Search"
+      (change)="onChange($event)"
+    >
   </mat-form-field>
-  <mat-slider thumbLabel min="50" max="250" value="180" [displayWith]="formatSliderValue"></mat-slider>
+  <mat-slider
+    thumbLabel
+    min="50"
+    max="250"
+    value="180"
+    [displayWith]="formatSliderValue"
+  ></mat-slider>
 </mat-card>
